# advent-of-code

./: pyproject.toml  readme.md  solutions.ipynb
2024/: Day1.ipynb  Day2.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb  Day6.ipynb  Day7.ipynb  Day8.ipynb
