[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Manikanta Dornala <manikanta.dornala@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
